css/parser/tests/errors/selector/pseudo-class/ident/output.stderr
error: Invalid selector
 --> $DIR/tests/errors/selector/pseudo-class/ident/input.css:1:2
  |
1 | : first-child {
  |  ^

